# crypto-converter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yaml
crypto_converter/: api.py  consumer.py  storage.py  utils.py
deploy/: docker-compose.yaml
tests/unit/: conftest.py  test_api.py
